--- a/app/blocks/form-elements/nd-form-elements.pug
+++ b/app/blocks/form-elements/nd-form-elements.pug
@@ -1,5 +1,5 @@
 mixin nd-input()
-  input.nd-input&attributes(attributes)
+  +b.INPUT.nd-input&attributes(attributes)
 
 mixin nd-input-number(data)
   - var val = data.value || 0;
@@ -48,11 +48,11 @@ mixin nd-input-number(data)
 //-       +e.button.js-numberbox-plus
 
 mixin nd-textarea()
-  textarea.nd-textarea&attributes(attributes)
+  +b.TEXTAREA.nd-textarea&attributes(attributes)
     block
 
 mixin nd-select()
-  select.nd-select&attributes(attributes)
+  +b.SELECT.nd-select&attributes(attributes)
     block
 
 mixin nd-checkbox(name, value, checked, required)
