--- a/app/blocks/arrange-viewing-form/arrange-viewing-form.pug
+++ b/app/blocks/arrange-viewing-form/arrange-viewing-form.pug
@@ -6,7 +6,7 @@ mixin arrange-viewing-form()
     +e.bottom
       +e.time
         +nd-form-box('Time')._bg-white
-          +nd-select()(name="arrangeViewingTime" data-choices-classes=" nd-choices_white nd-choices_h40" data-mobile-title="Pick a time").js-nd-select
+          +nd-select()(name="arrangeViewingTime" data-choices-classes=" nd-choices_white nd-choices_h40" data-mobile-title="Pick a time"  data-choices-popup="data-choices-popup").js-nd-select
             - for (var i = 0; i < 24; i++) {
               - var zeroi = (`0${i}`).slice(-2);
               if (i === 12)
@@ -17,6 +17,6 @@ mixin arrange-viewing-form()
                 option(value=zeroi + ':30')!=(zeroi + ':30')
             - }
       +e.buttons
-        +nd-button('button', true)._pad10._md-fz15(type="submit") Arrange viewing
+        +nd-button('button', true)._pad10._md-fz15.__button(type="submit") Arrange viewing
 
     block
