--- a/app/blocks/arrange-viewing-form/arrange-viewing-form.scss
+++ b/app/blocks/arrange-viewing-form/arrange-viewing-form.scss
@@ -1,3 +1,134 @@
 .arrange-viewing-form {
   $b: &;
+
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  align-content: center;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  padding: 5px 0;
+
+  @include screen('xlg', max, 2) {
+    padding: 0 pxtovw(5, 1660);
+  }
+
+  @include screen('lg', max, 2) {
+    padding: 0 pxtovw(5, 1366);
+  }
+
+  @include screen('md', max, 2) {
+    padding: 0 pxtovw(5, 960);
+  }
+
+  @include screen('sm', max, 2) {
+    padding: 0 pxtovw(5, 375);
+  }
+
+  &__top {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+  }
+
+  &__bottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    margin-top: 20px;
+
+    @include screen('xlg', max, 2) {
+      margin-top: pxtovw(20, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      margin-top: pxtovw(20, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      margin-top: pxtovw(20, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      margin-top: pxtovw(20, 375);
+    }
+  }
+
+  &__date {
+    font-size: 18px;
+    line-height: 1.2;
+    font-weight: 400;
+    font-family: $font-stolzl;
+
+    @include screen('xlg', max, 2) {
+      font-size: pxtovw(18, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      font-size: pxtovw(18, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      font-size: pxtovw(18, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      font-size: pxtovw(18, 375);
+    }
+  }
+
+  &__time {
+    display: block;
+    flex: 1;
+  }
+
+  &__buttons {
+    display: flex;
+    justify-content: flex-start;
+    flex: none;
+
+    &:not(:first-child) {
+      margin-left: 50px;
+
+      @include screen('xlg', max, 2) {
+        margin-left: pxtovw(50, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        margin-left: pxtovw(50, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        margin-left: pxtovw(50, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        margin-left: pxtovw(26, 375);
+      }
+    }
+  }
+
+  &__button {
+    min-width: 200px;
+
+    @include screen('xlg', max, 2) {
+      min-width: pxtovw(200, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      min-width: pxtovw(200, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      min-width: pxtovw(200, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      min-width: pxtovw(166, 375);
+    }
+  }
 }
