--- a/app/blocks/datepicker/dates.scss
+++ b/app/blocks/datepicker/dates.scss
@@ -1,7 +1,64 @@
 .dates {
   $b: &;
 
+  box-sizing: border-box;
+
   &.swiper-container-vertical .swiper-slide {
     height: auto;
+
+    &:not(:last-child) {
+      margin-bottom: 58px;
+
+      @include screen('xlg', max, 2) {
+        margin-bottom: pxtovw(58, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        margin-bottom: pxtovw(58, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        margin-bottom: pxtovw(58, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        margin-bottom: pxtovw(58, 375);
+      }
+    }
+  }
+
+  &_drop {
+    padding: 20px 10px;
+    box-shadow: 0 0 4px rgba(56, 58, 68, .09), 0 3px 14px rgba(0, 0, 0, .13);
+    border-radius: 3px;
+
+    @include screen('xlg', max, 2) {
+      padding: pxtovw(20, 1660) pxtovw(10, 1660);
+      border-radius: pxtovw(3, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      padding: pxtovw(20, 1366) pxtovw(10, 1366);
+      border-radius: pxtovw(3, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      padding: pxtovw(20, 960) pxtovw(10, 960);
+      border-radius: pxtovw(3, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      padding: pxtovw(20, 375)  pxtovw(5, 375);
+      border-radius: pxtovw(3, 375);
+    }
+  }
+
+  &__navigation {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
   }
 }
