--- a/app/components/popup-arrange-viewing/nd-popup-arrange-viewing.scss
+++ b/app/components/popup-arrange-viewing/nd-popup-arrange-viewing.scss
@@ -5,22 +5,22 @@
     &__content {
       display: flex;
       overflow: hidden;
-      padding-bottom: 111px;
+      padding: 111px 0;
 
       @include screen('xlg', max, 2) {
-        padding-bottom: pxtovw(111, 1660);
+        padding: pxtovw(111, 1660) 0;
       }
 
       @include screen('lg', max, 2) {
-        padding-bottom: pxtovw(111, 1366);
+        padding: pxtovw(111, 1366) 0;
       }
 
       @include screen('md', max, 2) {
-        padding-bottom: pxtovw(111, 960);
+        padding: pxtovw(111, 960) 0;
       }
 
       @include screen('sm', max, 2) {
-        padding-bottom: pxtovw(111, 375);
+        padding: pxtovw(111, 375) 0;
       }
 
       .nd-container {
@@ -29,6 +29,7 @@
     }
 
     &__footer {
+      display: flex;
       height: 111px;
       box-shadow: 0 -1px 2px rgba(0, 0, 0, .05);
 
@@ -52,5 +53,22 @@
 
   &__calendar {
     display: flex;
+    margin: 0 -10px;
+
+    @include screen('xlg', max, 2) {
+      margin: 0 pxtovw(-10, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      margin: 0 pxtovw(-10, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      margin: 0 pxtovw(-10, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      margin: 0 pxtovw(-10, 375);
+    }
   }
 }
