--- a/app/blocks/social/social.scss
+++ b/app/blocks/social/social.scss
@@ -27,10 +27,9 @@
 }
 
 .nd-social {
-  display: inline-block;
+  display: block;
   font-size: 0;
   line-height: 0;
-  overflow: hidden;
   color: inherit;
   fill: currentColor;
   transition: opacity $ease-main;
@@ -40,6 +39,7 @@
   }
 
   &__icon {
+    display: block;
     width: 28px;
     height: 28px;
     fill: inherit;
