--- a/app/components/footer/nd-footer.scss
+++ b/app/components/footer/nd-footer.scss
@@ -35,6 +35,16 @@
     margin-top: pxtovw(55, 375);
   }
 
+  .nd-offer-panel ~ & {
+    @include screen('md', max, 2) {
+      padding-bottom: pxtovw(106, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      padding-bottom: pxtovw(163, 375);
+    }
+  }
+
   &__top {
     @include display-grid;
     @include grid-template-columns(278px 277px 1fr);
