--- a/app/blocks/popups/nd-popup.scss
+++ b/app/blocks/popups/nd-popup.scss
@@ -4,6 +4,19 @@
   pointer-events: none;
   padding: 0;
   overflow: hidden;
+  max-width: 930px;
+
+  @include screen('xlg', max, 2) {
+    max-width: pxtovw(930, 1660);
+  }
+
+  @include screen('lg', max, 2) {
+    max-width: pxtovw(930, 1366);
+  }
+
+  @include screen('md', max, 2) {
+    max-width: none;
+  }
 
   &__container {
     position: absolute;
