--- a/app/blocks/form-box/form-box.scss
+++ b/app/blocks/form-box/form-box.scss
@@ -53,6 +53,10 @@
       .is-error & {
         color: $color-error;
       }
+
+      .is-error > .nd-form-box & {
+        color: $nd-color-input-placeholder;
+      }
     }
 
     .choices ~ & {
