--- a/app/blocks/form/form.pug
+++ b/app/blocks/form/form.pug
@@ -2,6 +2,10 @@ mixin form()
   +b.FORM.form&attributes(attributes)
     block
 
+mixin nd-form()
+  +b.FORM.nd-form&attributes(attributes)
+    block
+
 mixin form-section(tag)
   +e(tag || 'fieldset').section&attributes(attributes)
     block
