--- a/app/blocks/link/nd-link.scss
+++ b/app/blocks/link/nd-link.scss
@@ -20,6 +20,7 @@
     line-height: inherit;
     transition: background $ease-main;
     text-decoration: none;
+    text-underline-offset: 1px;
 
     #{$b}_underline & {
       text-decoration: underline;
