--- a/app/components/search-panel/search-panel.pug
+++ b/app/components/search-panel/search-panel.pug
@@ -22,14 +22,14 @@ mixin search-panel()
         +e.note Choose how to search or simply view all spaces.
       +e.block.hide(data-step="spaces")
         +e.offers
-          +nd-button-icon('a', 'circle _circle_orange', false, true)._icon_start._border._fz17.__link(href="#") Hot Desk
-          +nd-button-icon('a', 'circle _circle_red', false, true)._icon_start._border._fz17.__link(href="#") Fixed desk
-          +nd-button-icon('a', 'circle _circle_blue', false, true)._icon_start._border._fz17.__link(href="#") Meeting Room
-          +nd-button-icon('a', 'circle _circle_green', false, true)._icon_start._border._fz17.__link(href="#") Private office
+          +nd-button-icon('a', {icon: 'circle _circle_orange', iconBlock: true})._icon_start._border._fz17.__link(href="#") Hot Desk
+          +nd-button-icon('a', {icon: 'circle _circle_red', iconBlock: true})._icon_start._border._fz17.__link(href="#") Fixed desk
+          +nd-button-icon('a', {icon: 'circle _circle_blue', iconBlock: true})._icon_start._border._fz17.__link(href="#") Meeting Room
+          +nd-button-icon('a', {icon: 'circle _circle_green', iconBlock: true})._icon_start._border._fz17.__link(href="#") Private office
         +e.note Pick the type of workspace you want.
       +e.block.hide(data-step="teams")
         +e.teams
-          +nd-button-icon('a', 'user', false, true)._icon_start._border.__link(href="#") 1+
+          +nd-button-icon('a', {icon: 'user', iconBlock: true})._icon_start._border.__link(href="#") 1+
           +nd-button('a')._pad10._border._fz17.__link(href="#") 5+
           +nd-button('a')._pad10._border._fz17.__link(href="#") 10+
           +nd-button('a')._pad10._border._fz17.__link(href="#") 20+
