--- a/app/pages/sitemap/redesign-sitemap.pug
+++ b/app/pages/sitemap/redesign-sitemap.pug
@@ -19,3 +19,6 @@ block content
           +nd-link(href="nd-ui-kit.html") Spacepool - Новый ui-kit (nd-ui-kit.html)
           +nd-link(href="index.html") Spacepool - Главная (index.html)
           +nd-link(href="space-v3.html") Spacepool - Space (space-v3.html)
+          +nd-link(href="nd-signup.html") Spacepool - Sign Up (nd-signup.html)
+          +nd-link(href="nd-signup-confirm.html") Spacepool - Sign Up - Email Confirmed(nd-signup-confirm.html)
+          +nd-link(href="login.html") Spacepool - Log In (login.html)
