--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -90,6 +90,13 @@
       padding: 0 pxtovw(20, 375);
     }
   }
+
+  &_centered {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+  }
 }
 
 .js-sr {
