--- a/app/blocks/button/nd-button.pug
+++ b/app/blocks/button/nd-button.pug
@@ -6,14 +6,22 @@ mixin nd-button(newtag, loader)
       +e.preloader
         +loader._small
 
-mixin nd-button-icon(newtag, icon, loader, iconBlock)
+mixin nd-button-icon(newtag, data)
   +b(newtag || 'a').nd-button_icon&attributes(attributes)
+    if data.image
+      +e.IMG.icon(src=data.image.src class=data.image.cls)
+    if data.iconLeft
+      if data.iconBlock
+        +e.SPAN(class="__icon_" + data.icon)
+      else
+        +icon(icon)(class="__icon_" + data.icon)
     +e.SPAN.text
       block
-    if iconBlock
-      +e.SPAN(class="__icon_" + icon)
-    else
-      +icon(icon)(class="__icon_" + icon)
-    if loader
+    if !data.iconLeft
+      if data.iconBlock
+        +e.SPAN(class="__icon_" + data.icon)
+      else
+        +icon(data.icon)(class="__icon_" + data.icon)
+    if data.loader
       +e.preloader
         +loader._small
