--- a/app/blocks/form-elements/nd-form-elements.pug
+++ b/app/blocks/form-elements/nd-form-elements.pug
@@ -14,24 +14,6 @@ mixin nd-input-number(data)
     +e.button.js-numberbox-minus
     +e.button.js-numberbox-plus
 
-//- mixin input-number(name, value)
-//-   - var val = value || 0;
-//-   +b.LABEL.input-numberbox&attributes(attributes)
-//-     +e.field
-//-       +e.label amount:
-//-       +e.INPUT.input.js-numberbox-input(type="text" name=name value=val)
-//-     +e.button.js-numberbox-minus
-//-     +e.button.js-numberbox-plus
-
-//- mixin input-number-readonly(name, value)
-//-   - var val = value || 0;
-//-   +b.LABEL.is-readonly.input-numberbox__&attributes(attributes)
-//-     +e.field
-//-       +e.label amount:
-//-       +e.INPUT.input.js-numberbox-input(type="text" name=name value=val readonly)
-//-     +e.button.js-numberbox-minus
-//-     +e.button.js-numberbox-plus
-
 //- mixin input-numbers(name, placeholder, min, max)
 //-   +b.input-numbers&attributes(attributes)
 //-     - if (min && max) {
@@ -55,37 +37,76 @@ mixin nd-select()
   +b.SELECT.nd-select&attributes(attributes)
     block
 
-mixin nd-checkbox(name, value, checked, required)
+mixin nd-checkbox(data)
   +b.LABEL.nd-checkbox&attributes(attributes)
-    if checked
-      if required
-        +e.INPUT.input(name=name, value=value, checked, type="checkbox" required)
+    if data.checked
+      if data.required
+        +e.INPUT.input(name=data.name, value=data.value, checked, type="checkbox", required)
+      else if data.checker
+        +e.INPUT.input(name=data.name, value=data.value, checked, type="checkbox", data-checker=data.checker)
+      else if data.switch
+        +e.INPUT.input(name=data.name, value=data.value, checked, type="checkbox", data-form-switch=data.switch)
       else
-        +e.INPUT.input(name=name, value=value, checked, type="checkbox")
-    else if required
-      +e.INPUT.input(name=name, value=value, type="checkbox" required)
+        +e.INPUT.input(name=data.name, value=data.value, checked, type="checkbox")
+    else if data.required
+      if data.checker
+        +e.INPUT.input(name=data.name, value=data.value, type="checkbox", required, data-checker=data.checker)
+      else if data.switch
+        +e.INPUT.input(name=data.name, value=data.value, type="checkbox", required, data-form-switch=data.switch)
+      else
+        +e.INPUT.input(name=data.name, value=data.value, type="checkbox", required)
     else
-      +e.INPUT.input(name=name, value=value, type="checkbox")
+      if data.checker
+        +e.INPUT.input(name=data.name, value=data.value, type="checkbox", data-checker=data.checker)
+      else if data.switch
+        +e.INPUT.input(name=data.name, value=data.value, type="checkbox", data-form-switch=data.switch)
+      else
+        +e.INPUT.input(name=data.name, value=data.value, type="checkbox")
     +e.SPAN.box
-      +icon('check').__icon
-    +e.SPAN.content
-      block
+    if !data.nocontent
+      +e.SPAN.content
+        block
 
-mixin nd-radio(name, value, checked)
-  +b.LABEL.nd-checkradio&attributes(attributes)
-    if checked
-      if required
-        +e.INPUT.input(name=name, value=value, checked, type="radio" required)
+mixin nd-radio(data, tag)
+  +b(tag || 'label').nd-checkradio&attributes(attributes)
+    if data.checked
+      if data.required
+        +e.INPUT.input(name=data.name, value=data.value, checked, type="radio" required)
       else
-        +e.INPUT.input(name=name, value=value, checked, type="radio")
-    else if required
-      +e.INPUT.input(name=name, value=value, type="radio" required)
+        +e.INPUT.input(name=data.name, value=data.value, checked, type="radio")
+    else if data.required
+      +e.INPUT.input(name=data.name, value=data.value, type="radio" required)
     else
-      +e.INPUT.input(name=name, value=value, type="radio")
+      +e.INPUT.input(name=data.name, value=data.value, type="radio")
     +e.SPAN.box
-      +icon('check').__icon
-    +e.SPAN.content
-      block
+    if !data.nocontent
+      +e.SPAN.content
+        block
+
+mixin radio-button(data, tag)
+  +b(tag || 'label').radio-button&attributes(attributes)
+    if data.checked
+      if data.required
+        +e.INPUT.input(name=data.name, value=data.value, checked, type="radio" required)
+      else if data.switch
+        +e.INPUT.input(name=data.name, value=data.value, checked, type="radio", data-form-switch=data.switch)
+      else
+        +e.INPUT.input(name=data.name, value=data.value, checked, type="radio")
+    else if data.required
+      if data.switch
+        +e.INPUT.input(name=data.name, value=data.value, type="radio", required, data-form-switch=data.switch)
+      else
+        +e.INPUT.input(name=data.name, value=data.value, type="radio" required)
+    else
+      if data.switch
+        +e.INPUT.input(name=data.name, value=data.value, type="radio", data-form-switch=data.switch)
+      else
+        +e.INPUT.input(name=data.name, value=data.value, type="radio")
+    +e.wrapper
+      +e.SPAN.box
+      if !data.nocontent
+        +e.SPAN.content
+          block
 
 //- mixin color-radio(name, value, checked)
 //-   +b.LABEL.color-radio&attributes(attributes)
