--- a/app/blocks/form-elements/nd-input.scss
+++ b/app/blocks/form-elements/nd-input.scss
@@ -126,7 +126,7 @@
     }
   }
 
-  .is-top > & {
+  .is-top & {
     border-color: $nd-color-basic;
     box-shadow: inset 0 0 0 1px transparent;
     border-radius: 3px;
@@ -153,7 +153,11 @@
     }
   }
 
-  .is-error > & {
+  .is-error & {
     border-color: $nd-color-input-error-border;
+
+    &:hover {
+      border-color: $nd-color-field-border-hover;
+    }
   }
 }
