--- a/app/blocks/grid/grid.pug
+++ b/app/blocks/grid/grid.pug
@@ -14,6 +14,10 @@ mixin grid()
   .grid&attributes(attributes)
     block
 
+mixin nd-grid()
+  .nd-grid&attributes(attributes)
+    block
+
 mixin col(col)
   - var classNames = []
 
@@ -28,4 +32,21 @@ mixin col(col)
     - classNames.push(`grid__col_xl_${col}`)
 
   .grid__col(class=classNames.join(' '))&attributes(attributes)
+    block
+
+
+mixin nd-grid-col(col)
+  - var classNames = []
+
+  if typeof col === 'object'
+    - var knownKeys = ['xl', 'xlg', 'lg', 'md', 'sm', 'xs']
+
+    each val, key in col
+      if knownKeys.indexOf(key) !== -1
+        - classNames.push(`grid__col_${key}_${val}`)
+
+  else
+    - classNames.push(`grid__col_xl_${col}`)
+
+  .nd-grid__col(class=classNames.join(' '))&attributes(attributes)
     block
